--- a/openApiDocs/beta/Planner.yml
+++ b/openApiDocs/beta/Planner.yml
@@ -784,6 +784,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -821,6 +823,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -972,6 +975,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -1552,6 +1556,7 @@ paths:
               enum:
                 - id
                 - checklist
+                - completionRequirements
                 - description
                 - notes
                 - previewType
@@ -2188,6 +2193,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -2225,6 +2232,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -2360,6 +2368,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -2868,6 +2877,7 @@ paths:
               enum:
                 - id
                 - checklist
+                - completionRequirements
                 - description
                 - notes
                 - previewType
@@ -3596,6 +3606,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -3633,6 +3645,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -3752,6 +3765,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -4188,6 +4202,7 @@ paths:
               enum:
                 - id
                 - checklist
+                - completionRequirements
                 - description
                 - notes
                 - previewType
@@ -4517,6 +4532,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -4578,6 +4594,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -5289,6 +5307,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -5326,6 +5346,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -5461,6 +5482,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -5969,6 +5991,7 @@ paths:
               enum:
                 - id
                 - checklist
+                - completionRequirements
                 - description
                 - notes
                 - previewType
@@ -6354,6 +6377,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -6415,6 +6439,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -6755,6 +6781,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -6792,6 +6820,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -6911,6 +6940,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -7347,6 +7377,7 @@ paths:
               enum:
                 - id
                 - checklist
+                - completionRequirements
                 - description
                 - notes
                 - previewType
@@ -7676,6 +7707,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -7737,6 +7769,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -8636,6 +8670,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -8673,6 +8709,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -8782,6 +8819,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -9160,6 +9198,7 @@ paths:
               enum:
                 - id
                 - checklist
+                - completionRequirements
                 - description
                 - notes
                 - previewType
@@ -9433,6 +9472,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -9494,6 +9534,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -10896,6 +10938,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -10933,6 +10977,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -11096,6 +11141,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -11730,6 +11776,7 @@ paths:
               enum:
                 - id
                 - checklist
+                - completionRequirements
                 - description
                 - notes
                 - previewType
@@ -12432,6 +12479,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -12469,6 +12518,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -12616,6 +12666,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -13178,6 +13229,7 @@ paths:
               enum:
                 - id
                 - checklist
+                - completionRequirements
                 - description
                 - notes
                 - previewType
@@ -14075,6 +14127,8 @@ paths:
                 - recurrence desc
                 - referenceCount
                 - referenceCount desc
+                - specifiedCompletionRequirements
+                - specifiedCompletionRequirements desc
                 - startDateTime
                 - startDateTime desc
                 - title
@@ -14112,6 +14166,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -14243,6 +14298,7 @@ paths:
                 - priority
                 - recurrence
                 - referenceCount
+                - specifiedCompletionRequirements
                 - startDateTime
                 - title
                 - assignedToTaskBoardFormat
@@ -14733,6 +14789,7 @@ paths:
               enum:
                 - id
                 - checklist
+                - completionRequirements
                 - description
                 - notes
                 - previewType
@@ -15095,6 +15152,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.plannerSharedWithContainer'
+              description: List of containers the plan is shared with.
             title:
               type: string
               description: Required. Title of the plan.
@@ -15238,6 +15296,8 @@ components:
               description: Number of external references that exist on the task.
               format: int32
               nullable: true
+            specifiedCompletionRequirements:
+              $ref: '#/components/schemas/microsoft.graph.plannerTaskCompletionRequirements'
             startDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
@@ -15291,6 +15351,8 @@ components:
           properties:
             checklist:
               $ref: '#/components/schemas/microsoft.graph.plannerChecklistItems'
+            completionRequirements:
+              $ref: '#/components/schemas/microsoft.graph.plannerTaskCompletionRequirementDetails'
             description:
               type: string
               description: Description of the task.
@@ -15583,6 +15645,13 @@ components:
           description: The recurrence series this task belongs to. A GUID-based value that serves as the unique identifier for a series.
       additionalProperties:
         type: object
+    microsoft.graph.plannerTaskCompletionRequirements:
+      title: plannerTaskCompletionRequirements
+      enum:
+        - none
+        - checklistCompletion
+        - unknownFutureValue
+      type: string
     microsoft.graph.plannerOrderHintsByAssignee:
       title: plannerOrderHintsByAssignee
       type: object
@@ -15591,6 +15660,14 @@ components:
     microsoft.graph.plannerChecklistItems:
       title: plannerChecklistItems
       type: object
+      additionalProperties:
+        type: object
+    microsoft.graph.plannerTaskCompletionRequirementDetails:
+      title: plannerTaskCompletionRequirementDetails
+      type: object
+      properties:
+        checklistRequirement:
+          $ref: '#/components/schemas/microsoft.graph.plannerChecklistRequirement'
       additionalProperties:
         type: object
     microsoft.graph.itemBody:
@@ -15841,11 +15918,11 @@ components:
       properties:
         displayName:
           type: string
-          description: 'The display name of the identity. Note that this might not always be available or up to date. For example, if a user changes their display name, the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
+          description: The display name of the identity. This property is read-only.
           nullable: true
         id:
           type: string
-          description: Unique identifier for the identity.
+          description: The identifier of the identity. This property is read-only.
           nullable: true
       additionalProperties:
         type: object
@@ -15913,6 +15990,17 @@ components:
           description: 'The start date for the recurrence pattern. The Timestamp type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z. Required.'
           format: date-time
           nullable: true
+      additionalProperties:
+        type: object
+    microsoft.graph.plannerChecklistRequirement:
+      title: plannerChecklistRequirement
+      type: object
+      properties:
+        requiredChecklistItemIds:
+          type: array
+          items:
+            type: string
+            nullable: true
       additionalProperties:
         type: object
     microsoft.graph.bodyType:
