--- a/openApiDocs/beta/Reports.yml
+++ b/openApiDocs/beta/Reports.yml
@@ -11577,7 +11577,7 @@ components:
           properties:
             totalUserCount:
               type: integer
-              description: Provides the total user count in the tenant.
+              description: Provides the count of users with accountEnabled set to true in the tenant.
               format: int64
             userRegistrationCounts:
               type: array
@@ -12305,11 +12305,11 @@ components:
       properties:
         key:
           type: string
-          description: 'Contains the name of the field that a value is associated with. When a sign in or domain hint is included in the sign-in request, corresponding fields are included as key-value pairs. Possible keys: Login hint present, Domain hint present.'
+          description: Key.
           nullable: true
         value:
           type: string
-          description: Contains the corresponding value for the specified key. The value is true if a sign in hint was included in the sign-in request; otherwise false. The value is true if a domain hint was included in the sign-in request; otherwise false.
+          description: Value.
           nullable: true
       additionalProperties:
         type: object
@@ -12475,9 +12475,15 @@ components:
         authenticationStrength:
           $ref: '#/components/schemas/microsoft.graph.authenticationStrength'
         conditionsNotSatisfied:
-          $ref: '#/components/schemas/microsoft.graph.conditionalAccessConditions'
+          type: array
+          items:
+            $ref: '#/components/schemas/microsoft.graph.conditionalAccessConditions'
+          description: 'Refers to the conditional access policy conditions that are not satisfied. The possible values are: none, application, users, devicePlatform, location, clientType, signInRisk, userRisk, time, deviceState, client,ipAddressSeenByAzureAD,ipAddressSeenByResourceProvider,unknownFutureValue,servicePrincipals,servicePrincipalRisk. Note that you must use the Prefer: include-unknown-enum-members request header to get the following values in this evolvable enum: servicePrincipals,servicePrincipalRisk.'
         conditionsSatisfied:
-          $ref: '#/components/schemas/microsoft.graph.conditionalAccessConditions'
+          type: array
+          items:
+            $ref: '#/components/schemas/microsoft.graph.conditionalAccessConditions'
+          description: 'Refers to the conditional access policy conditions that are satisfied. The possible values are: none, application, users, devicePlatform, location, clientType, signInRisk, userRisk, time, deviceState, client,ipAddressSeenByAzureAD,ipAddressSeenByResourceProvider,unknownFutureValue,servicePrincipals,servicePrincipalRisk. Note that you must use the Prefer: include-unknown-enum-members request header to get the following values in this evolvable enum: servicePrincipals,servicePrincipalRisk.'
         displayName:
           type: string
           description: Name of the conditional access policy.
@@ -12526,7 +12532,7 @@ components:
           $ref: '#/components/schemas/microsoft.graph.authenticationEventType'
         executedListenerId:
           type: string
-          description: ID of the Event Listener that was executed.
+          description: ID of the authentication event listener that was executed.
           nullable: true
         handlerResult:
           $ref: '#/components/schemas/microsoft.graph.authenticationEventHandlerResult'
@@ -13028,9 +13034,16 @@ components:
           type: string
           description: Email address of the user.
           nullable: true
+        outOfOfficeDays:
+          maximum: 2147483647
+          minimum: -2147483648
+          type: integer
+          description: Number of days the user is OOF during a simulation journey/course of a campaign.
+          format: int32
+          nullable: true
         userId:
           type: string
-          description: This is the id property value of the user resource that represents the user in the Azure Active Directory tenant.
+          description: The id property value of the user resource that represents the user in the Azure Active Directory tenant.
           nullable: true
       additionalProperties:
         type: object
@@ -13365,11 +13378,11 @@ components:
       properties:
         displayName:
           type: string
-          description: 'The display name of the identity. Note that this might not always be available or up to date. For example, if a user changes their display name, the API might show the new value in a future response, but the items associated with the user won''t show up as having changed when using delta.'
+          description: The display name of the identity. This property is read-only.
           nullable: true
         id:
           type: string
-          description: Unique identifier for the identity.
+          description: The identifier of the identity. This property is read-only.
           nullable: true
       additionalProperties:
         type: object
