--- a/openApiDocs/v1.0/Sites.yml
+++ b/openApiDocs/v1.0/Sites.yml
@@ -5754,11 +5754,11 @@ paths:
     get:
       tags:
         - groups.site
-      summary: Get metadata for a list
-      description: 'Returns the metadata for a [list][].'
+      summary: List operations on a list
+      description: Get a list of rich long-running operations associated with a list.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/list-get?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/list-list-operations?view=graph-rest-1.0
       operationId: group.site_GetList
       parameters:
         - name: group-id
@@ -64640,7 +64640,7 @@ paths:
       tags:
         - sites.site
       summary: List sites
-      description: 'List all available sites][] in an organization. Specific filter criteria and query options are also supported and described below: In addition, you can use a **[$search][]** query against the `/sites` collection to find sites matching given keywords. For more guidance about building applications that use site discovery for scanning purposes, see [Best practices for discovering files and detecting changes at scale.'
+      description: "List all available [sites][] in an organization. Specific filter criteria and query options are also supported and described below: In addition, you can use a **[$search][]** query against the `/sites` collection to find sites matching given keywords.\nIf you want to list all sites across all geographies, refer to getAllSites][]. For more guidance about building applications that use site discovery for scanning purposes, see [Best practices for discovering files and detecting changes at scale."
       externalDocs:
         description: Find more info here
         url: https://docs.microsoft.com/graph/api/site-list?view=graph-rest-1.0
@@ -69400,11 +69400,11 @@ paths:
     get:
       tags:
         - sites.list
-      summary: Get metadata for a list
-      description: 'Returns the metadata for a [list][].'
+      summary: List operations on a list
+      description: Get a list of rich long-running operations associated with a list.
       externalDocs:
         description: Find more info here
-        url: https://docs.microsoft.com/graph/api/list-get?view=graph-rest-1.0
+        url: https://docs.microsoft.com/graph/api/list-list-operations?view=graph-rest-1.0
       operationId: site_GetList
       parameters:
         - name: site-id
@@ -125995,6 +125995,7 @@ components:
               type: array
               items:
                 $ref: '#/components/schemas/microsoft.graph.chatMessageHistoryItem'
+              description: 'List of activity history of a message item, including modification time and actions, such as reactionAdded, reactionRemoved, or reaction changes, on the message.'
             messageType:
               $ref: '#/components/schemas/microsoft.graph.chatMessageType'
             policyViolation:
@@ -126303,7 +126304,7 @@ components:
             expirationDateTime:
               pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
               type: string
-              description: 'Timestamp of when the group is set to expire. The value cannot be modified and is automatically populated when the group is created. The Timestamp type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z. Returned by default. Supports $filter (eq, ne, not, ge, le, in). Read-only.'
+              description: 'Timestamp of when the group is set to expire. Is null for security groups but for Microsoft 365 groups, it represents when the group is set to expire as defined in the groupLifecyclePolicy. The Timestamp type represents date and time information using ISO 8601 format and is always in UTC time. For example, midnight UTC on Jan 1, 2014 is 2014-01-01T00:00:00Z. Returned by default. Supports $filter (eq, ne, not, ge, le, in). Read-only.'
               format: date-time
               nullable: true
             groupTypes:
@@ -128418,6 +128419,7 @@ components:
         modifiedDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
+          description: The date and time when the message was modified.
           format: date-time
         reaction:
           $ref: '#/components/schemas/microsoft.graph.chatMessageReaction'
